# CodingStandards

./: .gitmodules  CMakeLists.txt  README.md
templates/: CMakeLists.txt  README.md
templates/TemplateApplication/: CMakeLists.txt  README.md
templates/TemplateApplication/src/: CMakeLists.txt  TemplateApplicationVersion.h  TemplateApplicationVersion.h.in  main.cpp
templates/TemplateLibrary/: CMakeLists.txt  README.md
templates/TemplateLibrary/demo/: CMakeLists.txt  main.cpp
templates/TemplateLibrary/example/: main.cpp
templates/TemplateLibrary/src/: CMakeLists.txt  TemplateLibrary.cpp  TemplateLibrary.h  TemplateLibraryVersion.h  TemplateLibraryVersion.h.in
templates/TemplateLibrary/test/: main.cpp
